--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
+    "nodemailer": "^7.0.12",
     "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
