--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# PWA
+public/sw.js
+public/workbox-*.js
+public/worker-*.js
 # env files (can opt-in for committing if needed)
 .env*
 
